--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ https://www.tooplate.com/view/2120-ben-resume
                   <h3 class="my-4 pt-4 pt-lg-0">Say hello</h3>
                   <ul class="social-links mt-2">
                     <li><a href="https://www.facebook.com/joeksdb" rel="noopener" class="fab fa-facebook"></a></li>
-                    <li><a href="https://in.linkedin.com/in/joe-jomon-joeksdb-554b956" rel="noopener" class="fab fa-twitter"></a></li>
+                    <li><a href="https://x.com/joeksdb?t=R3zu7xj6LYX1PyXCD8kv6w&s=08" rel="noopener" class="fab fa-twitter"></a></li>
                  
                     <li><a href="https://in.linkedin.com/in/joe-jomon-joeksdb-554b956" rel="noopener" class="fab fa-linkedin"></a></li>
                     
