--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-     <title>Dr.Fr.JOE KOKKANDATHIL SDB- PROFILE </title>
+     <title>Dr.Fr.JOE KOKKANDATHIL SDB- PROFILE</title>
 
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -117,6 +117,42 @@ https://www.tooplate.com/view/2120-ben-resume
       <div class="container">
         <h3 class="mb-4 pb-3">My Services</h3>
         <div class="row ">
+
+          <!-- image 9 -->
+          
+          <div class="col-lg-6 py-3">
+            <div class="card shadow-sm">
+              <img src="images/classes/9.jpg" alt="" class="img-fluid">
+              <div class="card-body">
+                <p class="card-text">Teachers training Puthupally kottayam.</p>
+                <!-- <small> 30<sup>th</sup> oct 2018</small> -->
+              </div>
+            </div>
+          </div>
+
+          <!-- image 8 -->
+
+          <div class="col-lg-6 py-3">
+            <div class="card shadow-sm">
+              <img src="images/classes/8.jpg" alt="" class="img-fluid">
+              <div class="card-body">
+                <p class="card-text">Don Bosco school Mannuthy Staff Training.</p>
+                <!-- <small> 30<sup>th</sup> oct 2018</small> -->
+              </div>
+            </div>
+          </div>
+
+          <!-- image 7 -->
+          <div class="col-lg-6 py-3">
+            <div class="card shadow-sm">
+              <img src="images/classes/7.jpg" alt="" class="img-fluid">
+              <div class="card-body">
+                <p class="card-text">Auxiluim Calicut staff training.</p>
+                <!-- <small> 30<sup>th</sup> oct 2018</small> -->
+              </div>
+            </div>
+          </div>
+
         <!-- image 1 -->
   
         <div class="col-lg-6 py-3">
