--- a/index.html
+++ b/index.html
@@ -267,8 +267,8 @@ https://www.tooplate.com/view/2120-ben-resume
                 <div class="phone">
                   <i class="bi bi-phone"></i>
                   <h4>Call:</h4>
-                  <p>+91 81050 56318</p>
-                  <p>+91 94969 38698</p>
+                  <p><a href="tel:+918105056318"></a>+91 81050 56318</p>
+                  <p><a href="tel:+919496938698"></a>+91 94969 38698</p>
                 </div>
   
                 
